[gd_scene load_steps=2 format=3 uid="uid://byu23jxubn8hn"]

[ext_resource type="Script" path="res://upgrade_window.gd" id="1"]

[node name="UpgradeWindow" type="Window"]
title = "Upgrades"
visible = false
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]

[node name="SpeedHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/SpeedHBox"]
layout_mode = 2
text = "Speed: "

[node name="SpeedLevel" type="Label" parent="VBoxContainer/SpeedHBox"]
layout_mode = 2
text = "1"

[node name="UpgradeSpeedButton" type="Button" parent="VBoxContainer/SpeedHBox"]
layout_mode = 2
text = "Upgrade Speed"

[node name="JumpHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JumpLabel" type="Label" parent="VBoxContainer/JumpHBox"]
layout_mode = 2
text = "Jump: "

[node name="JumpLevel" type="Label" parent="VBoxContainer/JumpHBox"]
layout_mode = 2
text = "1"

[node name="UpgradeJumpButton" type="Button" parent="VBoxContainer/JumpHBox"]
layout_mode = 2
text = "Upgrade Jump"

[node name="VisionHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VisionLabel" type="Label" parent="VBoxContainer/VisionHBox"]
layout_mode = 2
text = "Vision: "

[node name="VisionLevel" type="Label" parent="VBoxContainer/VisionHBox"]
layout_mode = 2
text = "1"

[node name="UpgradeVisionButton" type="Button" parent="VBoxContainer/VisionHBox"]
layout_mode = 2
text = "Upgrade Vision"

[node name="AttackHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AttackLabel" type="Label" parent="VBoxContainer/AttackHBox"]
layout_mode = 2
text = "Attack: "

[node name="AttackLevel" type="Label" parent="VBoxContainer/AttackHBox"]
layout_mode = 2
text = "1"

[node name="UpgradeAttackButton" type="Button" parent="VBoxContainer/AttackHBox"]
layout_mode = 2
text = "Upgrade Attack"

[node name="RangeHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RangeLabel" type="Label" parent="VBoxContainer/RangeHBox"]
layout_mode = 2
text = "Attack Range: "

[node name="RangeLevel" type="Label" parent="VBoxContainer/RangeHBox"]
layout_mode = 2
text = "1"

[node name="UpgradeRangeButton" type="Button" parent="VBoxContainer/RangeHBox"]
layout_mode = 2
text = "Upgrade Range"

[node name="GemsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gems: 0"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"
